--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         -ms-box-sizing: border-box;
       }
       #wrapper {
+        background-color: #000090;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
